Updated nav menu to make it responsive to different devices

--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
       <a href="index.html">
         <h1>New World Travel</h1>
       </a>
-      <nav> 
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="desinations.html">Destinations</a></li>
+      <input type="checkbox" id="nav-toggle" name="nav-toggle" />
+      <label for="nav-toggle" class="nav-toggle-label">X</label>
+      <nav>
+        <ul id="nav">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="desinations.html">Destinations</a></li>
+        </ul>
       </nav>
     </header>
-    <main>Hello</main>
+    <main>Main Content</main>
 
     <footer>Footer</footer>
   </body>
