Added social medial links to the footer

--- a/index.html
+++ b/index.html
@@ -24,6 +24,31 @@
     </header>
     <main>Main Content</main>
 
-    <footer>Footer</footer>
+    <footer>
+      <ul>
+        <li>
+          <a
+            href="https://www.facebook.com"
+            target="_blank"
+            rel="noopener"
+            arla-label="Visit our Facebook Page (Opens in a new tab)"
+            ><i class="fa-brands fa-square-facebook"></i
+          ></a>
+        </li>
+        <a href="https://www.twitter.com" target="_blank" rel="noopener"
+            arla-label="Visit our Twitter Page (Opens in a new tab)"><i class="fa-brands fa-x-twitter"></i>></a>
+        </li>
+        </li>
+        <a href="https://www.instagram.com" target="_blank" rel="noopener"
+            arla-label="Visit our Instagram Page (Opens in a new tab)"><i class="fa-brands fa-instagram"></i>></a>
+        </li>
+      </ul>
+    </footer>
+
+    <!-- Font awesome link-->
+    <script
+      src="https://kit.fontawesome.com/f6fb414094.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
