Styled the footer and put finishing styling touches to navigation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>New World Travel</h1>
       </a>
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
-      <label for="nav-toggle" class="nav-toggle-label">X</label>
+      <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
       <nav>
         <ul id="nav">
           <li><a href="index.html">Home</a></li>
@@ -25,22 +25,22 @@
     <main>Main Content</main>
 
     <footer>
-      <ul>
+      <ul id="social-media">
         <li>
           <a
-            href="https://www.facebook.com"
-            target="_blank"
-            rel="noopener"
+            href="https://www.facebook.com" target="_blank" rel="noopener"
             arla-label="Visit our Facebook Page (Opens in a new tab)"
             ><i class="fa-brands fa-square-facebook"></i
           ></a>
         </li>
         <a href="https://www.twitter.com" target="_blank" rel="noopener"
-            arla-label="Visit our Twitter Page (Opens in a new tab)"><i class="fa-brands fa-x-twitter"></i>></a>
+           arla-label="Visit our Twitter Page (Opens in a new tab)">
+           <i class="fa-brands fa-twitter"></i></a>
         </li>
         </li>
         <a href="https://www.instagram.com" target="_blank" rel="noopener"
-            arla-label="Visit our Instagram Page (Opens in a new tab)"><i class="fa-brands fa-instagram"></i>></a>
+            arla-label="Visit our Instagram Page (Opens in a new tab)">
+            <i class="fa-brands fa-instagram"></i></a>
         </li>
       </ul>
     </footer>
