--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
         </ul>
       </nav>
     </header>
-    <main>Main Content</main>
+    <main>
+ <section id="plane"></section>
+
+
+    </main>
 
     <footer>
       <ul id="social-media">
