--- a/about.html
+++ b/about.html
@@ -22,7 +22,11 @@
         </ul>
       </nav>
     </header>
-    <main>Main Content</main>
+    <main>
+        <section>
+    <h1>Come with me</h1>
+        </section>
+    </main>
 
     <footer>
       <ul id="social-media">
