--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>New World Travel</title>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
+  
   <body>
+    <!--Header and Navigation Menu-->
     <header>
       <a href="index.html">
         <h1>New World Travel</h1>
@@ -22,11 +24,34 @@
         </ul>
       </nav>
     </header>
-    <main>
- <section id="plane"></section>
+ 
+<main>
+    <section id="plane"></section>
+    <section>   
+    <h2>Find your next travel destination</h2>
+       <p>Come and find your next travel destination by reading our encyclopedia of worldwide locations. Subscribe below to be updated on all new destinations</p>
+    </section>
+    <section>
+        <h2>Subscribe for updates to our destinations</h2>
+        <form action="https://formdump.codeinstitute.net" method="POST">
+            <div>
+            <label for="first-name">First Name</label>
+            <input id="first-name" type="text" placeholder="Please enter your first name">
+            </div>
+            <div>
+                <label for="surname">Surname</label>
+                <input id="surname" type="text" placeholder="Please enter your surname">
+            </div>
+            <div>
+            <label for="email">Email</label>
+            <input id="email" type="email" placeholder="Please enter your email address" required>
+            </div>
+            <input type="submit" value="Subscribe">
 
+        </form>
+    </section>
+</main>
 
-    </main>
 
     <footer>
       <ul id="social-media">
