Added a paragraph and paragraphs to the abous page

--- a/about.html
+++ b/about.html
@@ -22,10 +22,14 @@
         </ul>
       </nav>
     </header>
-    <main>
+<main>
         <section>
-    <h1>Come with me</h1>
-        </section>
+    <h2>About Us</h2>
+    <p>Are you as passionate about travel as we are? Then come along on our journey. Our goal is to make everybodies travel decisions easy by providing a huge encyclopedia of destinations the detail activites, amenities and sight seeing musts</p>
+    <p>So are you a travel buff and want to know about all the go to destinations? Then keep searching through our destinations. Better yet, if you want to keep updated about all new destinations, subscribe to our newsletter below.</p>
+    <img url="file:///workspaces/New-World-Travel/assets/css/style.css">
+</section>
+        
     </main>
 
     <footer>
