--- a/about.html
+++ b/about.html
@@ -27,7 +27,25 @@
     <h2>About Us</h2>
     <p>Are you as passionate about travel as we are? Then come along on our journey. Our goal is to make everybodies travel decisions easy by providing a huge encyclopedia of destinations the detail activites, amenities and sight seeing musts</p>
     <p>So are you a travel buff and want to know about all the go to destinations? Then keep searching through our destinations. Better yet, if you want to keep updated about all new destinations, subscribe to our newsletter below.</p>
-    <img url="file:///workspaces/New-World-Travel/assets/css/style.css">
+</section>
+<section>
+    <h2>Subscribe for updates to our destinations</h2>
+    <form action="https://formdump.codeinstitute.net" method="POST">
+        <div>
+            <label for="first-name">First Name</label>
+            <input id="first-name" type="text" placeholder="Please enter your first name">
+        </div>
+        <div>
+            <label for="surname">Surname</label>
+            <input id="surname" type="text" placeholder="Please enter your surname">
+        </div>
+        <div>
+            <label for="email">Email</label>
+            <input id="email" type="email" placeholder="Please enter your email address" required>
+        </div>
+        <input type="submit" value="Subscribe">
+
+    </form>
 </section>
         
     </main>
