Added sunset image to aboute page

--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
     <p>Are you as passionate about travel as we are? Then come along on our journey. Our goal is to make everybodies travel decisions easy by providing a huge encyclopedia of destinations the detail activites, amenities and sight seeing musts</p>
     <p>So are you a travel buff and want to know about all the go to destinations? Then keep searching through our destinations. Better yet, if you want to keep updated about all new destinations, subscribe to our newsletter below.</p>
 </section>
+<section id="sunset"></section>
 <section>
     <h2>Subscribe for updates to our destinations</h2>
     <form action="https://formdump.codeinstitute.net" method="POST">
