Added a Lanzarote section with text and image to destinations page

--- a/destinations.html
+++ b/destinations.html
@@ -22,7 +22,14 @@
         </ul>
       </nav>
     </header>
-    <main>Main Content</main>
+    <main>
+    <section>
+    <h2>Lanzarote</h2>
+    <img src="https://www.freeimages.com/photo/lanzarote-1382069" alt="Beautiful Lanzarote sea and scenery">
+    <p>If you want a holiday filled with sunset, glorious beaches, good food and a raring nightlife, Lanzarote can be the perfect destinations. The beaches are beautiful and when you need a meal, you can literally walk 30 seconds across the road to a huge variety of restaurants and bars. My advice, you have to eat at 'Fu Gi'. You will not have a better chinese meal. Coupled with boat rides, water sports and hikes, you will not be short of activities.
+    </section>
+
+    </main>
 
     <footer>
       <ul id="social-media">
