Noticed images weren't loading. Ensured they were in the assets folder and changed the src. Also added a class for each image to ensure fits the page properly

--- a/destinations.html
+++ b/destinations.html
@@ -27,19 +27,19 @@
         <!--Lanzarote section-->
     <section>
     <h2>Lanzarote</h2>
-    <img src="https://www.freeimages.com/photo/lanzarote-1382069" alt="Beautiful Lanzarote sea and scenery">
+    <img src="assets/images/Lanzarote.jpg" class="lanzarote" alt="Beautiful Lanzarote sea and scenery">
     <p>If you want a holiday filled with sunset, glorious beaches, good food and a raring nightlife, Lanzarote can be the perfect destinations. The beaches are beautiful and when you need a meal, you can literally walk 30 seconds across the road to a huge variety of restaurants and bars. My advice, you have to eat at 'Fu Gi'. You will not have a better chinese meal. Coupled with boat rides, water sports and hikes, you will not be short of activities.
     </section>
        <!--New York section--> 
     <section>
         <h2>New York</h2>
-        <img src="https://www.istockphoto.com/photo/new-york-gm1765421980-545278115" alt="Skyline image of New York City">
+        <img src="assets/images/New York.jpg" class="new-york" alt="Skyline image of New York City">
     <p>Now should you prefer shopping heaven to beaches, New York is your ideal destination. The beautiful skyline is just the tip of the iceberg with this one. New York truly is the city that never sleeps with most businesses open 24/7. You will not be short of shopping destination or good restaurants. Everyone needs to try New York style pizza to see if it is better than italian style. Never forget to go on a boat trip to the Statue of Liberty. Just seeing this is a spectacle on it's own especially if you go for the 4th July celebrations.</p>
     </section>
       <!--Rome section-->    
     <section>
         <h2>Rome</h2>
-        <img src="https://www.istockphoto.com/photo/coliseum-at-the-dusk-gm1130665330-299105020" alt="The Rome Colosseum">
+        <img src="assets/images/Coloseum.jpg" class="rome" alt="The Rome Colosseum">
         <p>Our next location is all about history. If you want to explore the glorious artichecture of our world then Rome is the perfect place. You will not find more beautiful buildings that are loaded with history. You will not get bored of these site seeing spectacles. And it's not just about the buildings, it is the perfect opportunity to bask in traditional italian food, and I mean proper italian food the way it is supposed to be. This is definitely one for the bucket list.</p>
     </section>
     </main>
