--- a/destinations.html
+++ b/destinations.html
@@ -68,6 +68,26 @@
     </div>
 </div>
 </section>
+<section>
+    <h2>Subscribe for updates to our destinations</h2>
+    <form action="https://formdump.codeinstitute.net" method="POST">
+        <div>
+            <label for="first-name">First Name</label>
+            <input id="first-name" type="text" placeholder="Please enter your first name">
+        </div>
+        <div>
+            <label for="surname">Surname</label>
+            <input id="surname" type="text" placeholder="Please enter your surname">
+        </div>
+        <div>
+            <label for="email">Email</label>
+            <input id="email" type="email" placeholder="Please enter your email address" required>
+        </div>
+        <input type="submit" value="Subscribe">
+
+    </form>
+</section>
+
     </main>
 
     <footer>
