--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
             <label for="email">Email</label>
             <input id="email" type="email" placeholder="Please enter your email address" required>
         </div>
-        <input type="submit" value="Subscribe">
+        <button type="submit">Subscribe</button>
 
     </form>
 </section>
