Noticed some errors in code when going through validation and so corrected

--- a/about.html
+++ b/about.html
@@ -13,7 +13,9 @@
         <h1>New World Travel</h1>
       </a>
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
-      <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+      <label for="nav-toggle" class="nav-toggle-label"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
       <nav>
         <ul id="nav">
           <li><a href="index.html">Home</a></li>
@@ -22,52 +24,72 @@
         </ul>
       </nav>
     </header>
-<main>
-        <section>
-    <h2>About Us</h2>
-    <p>Are you as passionate about travel as we are? Then come along on our journey. Our goal is to make everybodies travel decisions easy by providing a huge encyclopedia of destinations the detail activites, amenities and sight seeing musts</p>
-    <p>So are you a travel buff and want to know about all the go to destinations? Then keep searching through our destinations. Better yet, if you want to keep updated about all new destinations, subscribe to our newsletter below.</p>
-</section>
-<section id="sunset"></section>
-<section>
-    <h2>Subscribe for updates to our destinations</h2>
-    <form action="https://formdump.codeinstitute.net" method="POST">
-        <div>
+    <main>
+      <section>
+        <h2>About Us</h2>
+        <p>
+          Are you as passionate about travel as we are? Then come along on our
+          journey. Our goal is to make everybodies travel decisions easy by
+          providing a huge encyclopedia of destinations the detail activites,
+          amenities and sight seeing musts
+        </p>
+        <p>
+          So are you a travel buff and want to know about all the go to
+          destinations? Then keep searching through our destinations. Better
+          yet, if you want to keep updated about all new destinations, subscribe
+          to our newsletter below.
+        </p>
+      </section>
+      <section id="sunset"></section>
+      <section>
+        <h2>Subscribe for updates to our destinations</h2>
+        <form action="https://formdump.codeinstitute.net" method="POST">
+          <div>
             <label for="first-name">First Name</label>
-            <input id="first-name" type="text" placeholder="Please enter your first name">
-        </div>
-        <div>
+            <input
+              id="first-name"
+              type="text"
+              placeholder="Please enter your first name"
+            />
+          </div>
+          <div>
             <label for="surname">Surname</label>
-            <input id="surname" type="text" placeholder="Please enter your surname">
-        </div>
-        <div>
+            <input
+              id="surname"
+              type="text"
+              placeholder="Please enter your surname"
+            />
+          </div>
+          <div>
             <label for="email">Email</label>
-            <input id="email" type="email" placeholder="Please enter your email address" required>
-        </div>
-        <button type="submit">Subscribe</button>
-
-    </form>
-</section>
-        
+            <input
+              id="email"
+              type="email"
+              placeholder="Please enter your email address"
+              required
+            />
+          </div>
+          <button type="submit">Subscribe</button>
+        </form>
+      </section>
     </main>
 
     <footer>
       <ul id="social-media">
         <li>
-          <a
-            href="https://www.facebook.com" target="_blank" rel="noopener"
-            arla-label="Visit our Facebook Page (Opens in a new tab)"
-            ><i class="fa-brands fa-square-facebook"></i
+          <a href="https://www.facebook.com" target="_blank" rel="noopener">
+            <i class="fa-brands fa-square-facebook"></i
           ></a>
         </li>
-        <a href="https://www.twitter.com" target="_blank" rel="noopener"
-           arla-label="Visit our Twitter Page (Opens in a new tab)">
-           <i class="fa-brands fa-twitter"></i></a>
+        <li>
+          <a href="https://www.twitter.com" target="_blank" rel="noopener">
+            <i class="fa-brands fa-twitter"></i
+          ></a>
         </li>
-        </li>
-        <a href="https://www.instagram.com" target="_blank" rel="noopener"
-            arla-label="Visit our Instagram Page (Opens in a new tab)">
-            <i class="fa-brands fa-instagram"></i></a>
+        <li>
+          <a href="https://www.instagram.com" target="_blank" rel="noopener">
+            <i class="fa-brands fa-instagram"></i
+          ></a>
         </li>
       </ul>
     </footer>
