--- a/index.html
+++ b/index.html
@@ -57,18 +57,15 @@
       <ul id="social-media">
         <li>
           <a
-            href="https://www.facebook.com" target="_blank" rel="noopener"
-            arla-label="Visit our Facebook Page (Opens in a new tab)"
-            ><i class="fa-brands fa-square-facebook"></i
-          ></a>
+            href="https://www.facebook.com" target="_blank" rel="noopener">
+            <i class="fa-brands fa-square-facebook"></i></a>
         </li>
-        <a href="https://www.twitter.com" target="_blank" rel="noopener"
-           arla-label="Visit our Twitter Page (Opens in a new tab)">
+        <li>
+        <a href="https://www.twitter.com" target="_blank" rel="noopener">
            <i class="fa-brands fa-twitter"></i></a>
         </li>
-        </li>
-        <a href="https://www.instagram.com" target="_blank" rel="noopener"
-            arla-label="Visit our Instagram Page (Opens in a new tab)">
+        <li>
+        <a href="https://www.instagram.com" target="_blank" rel="noopener">
             <i class="fa-brands fa-instagram"></i></a>
         </li>
       </ul>
