Noticed errors on the code for destination page using validator so corrected code

--- a/destinations.html
+++ b/destinations.html
@@ -32,14 +32,14 @@
           <h2>Lanzarote</h2>
         </div>
         <div class="outer-div">
-          <div id="img-l">
+          <div class="img-l">
             <img
               src="assets/images/Lanzarote.jpg"
               class="lanzarote"
               alt="Beautiful Lanzarote sea and scenery"
             />
           </div>
-          <div id="text-r">
+          <div class="text-r">
             <p>
               If you want a holiday filled with sunset, glorious beaches, good
               food and a raring nightlife, Lanzarote can be the perfect
@@ -60,14 +60,15 @@
           <h2>New York</h2>
         </div>
         <div class="outer-div">
-          <div id="img-l">
+          <div class="img-l">
             <img
-              src="assets/images/New York.jpg"
+              src="assets/images/New-York.jpg"
               class="new-york"
-              alt="Skyline image of New York City"
+              alt="Skyline
+            image of New York City"
             />
           </div>
-          <div id="text-r">
+          <div class="text-r">
             <p>
               Now should you prefer shopping heaven to beaches, New York is your
               ideal destination. The beautiful skyline is just the tip of the
@@ -89,14 +90,15 @@
           <h2>Rome</h2>
         </div>
         <div class="outer-div">
-          <div id="img-l">
+          <div class="img-l">
             <img
               src="assets/images/Coloseum.jpg"
               class="rome"
-              alt="The Rome Colosseum"
+              alt="The Rome
+            Colosseum"
             />
           </div>
-          <div id="text-r">
+          <div class="text-r">
             <p>
               Our next location is all about history. If you want to explore the
               glorious artichecture of our world then Rome is the perfect place.
