Ran the CSS through the validator and found 2 issues which were corrected

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <h2>Find your next travel destination</h2>
        <p>Come and find your next travel destination by reading our encyclopedia of worldwide locations. Subscribe below to be updated on all new destinations</p>
     </section>
+    
+    <!--Subsctiption form-->
     <section>
         <h2>Subscribe for updates to our destinations</h2>
         <form action="https://formdump.codeinstitute.net" method="POST">
