Amended font color to be more accessible and and added some aria labels to links

--- a/about.html
+++ b/about.html
@@ -41,6 +41,8 @@
         </p>
       </section>
       <section id="sunset"></section>
+
+      <!--Subsctiption form-->
       <section>
         <h2>Subscribe for updates to our destinations</h2>
         <form action="https://formdump.codeinstitute.net" method="POST">
@@ -77,17 +79,32 @@
     <footer>
       <ul id="social-media">
         <li>
-          <a href="https://www.facebook.com" target="_blank" rel="noopener">
+          <a
+            href="https://www.facebook.com"
+            target="_blank"
+            aria-label="Click to visit our Facebook page (opens in new tab)"
+            rel="noopener"
+          >
             <i class="fa-brands fa-square-facebook"></i
           ></a>
         </li>
         <li>
-          <a href="https://www.twitter.com" target="_blank" rel="noopener">
+          <a
+            href="https://www.twitter.com"
+            target="_blank"
+            aria-label="Click to visit our Twitter page (opens in new tab)"
+            rel="noopener"
+          >
             <i class="fa-brands fa-twitter"></i
           ></a>
         </li>
         <li>
-          <a href="https://www.instagram.com" target="_blank" rel="noopener">
+          <a
+            href="https://www.instagram.com"
+            target="_blank"
+            aria-label="Click to visit our Instagram page (opens in new tab)"
+            rel="noopener"
+          >
             <i class="fa-brands fa-instagram"></i
           ></a>
         </li>
