--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>New World Travel</title>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
-  
+
   <body>
     <!--Header and Navigation Menu-->
     <header>
@@ -15,7 +15,9 @@
         <h1>New World Travel</h1>
       </a>
       <input type="checkbox" id="nav-toggle" name="nav-toggle" />
-      <label for="nav-toggle" class="nav-toggle-label"><i class="fa-solid fa-bars"></i></label>
+      <label for="nav-toggle" class="nav-toggle-label"
+        ><i class="fa-solid fa-bars"></i
+      ></label>
       <nav>
         <ul id="nav">
           <li><a href="index.html">Home</a></li>
@@ -24,51 +26,83 @@
         </ul>
       </nav>
     </header>
- 
-<main>
-    <section id="plane"></section>
-    <section>   
-    <h2>Find your next travel destination</h2>
-       <p>Come and find your next travel destination by reading our encyclopedia of worldwide locations. Subscribe below to be updated on all new destinations</p>
-    </section>
-    
-    <!--Subsctiption form-->
-    <section>
+
+    <main>
+      <section id="plane"></section>
+      <section>
+        <h2>Find your next travel destination</h2>
+        <p>
+          Come and find your next travel destination by reading our encyclopedia
+          of worldwide locations. Subscribe below to be updated on all new
+          destinations
+        </p>
+      </section>
+
+      <!--Subsctiption form-->
+      <section>
         <h2>Subscribe for updates to our destinations</h2>
         <form action="https://formdump.codeinstitute.net" method="POST">
-            <div>
+          <div>
             <label for="first-name">First Name</label>
-            <input id="first-name" type="text" placeholder="Please enter your first name">
-            </div>
-            <div>
-                <label for="surname">Surname</label>
-                <input id="surname" type="text" placeholder="Please enter your surname">
-            </div>
-            <div>
+            <input
+              id="first-name"
+              type="text"
+              placeholder="Please enter your first name"
+            />
+          </div>
+          <div>
+            <label for="surname">Surname</label>
+            <input
+              id="surname"
+              type="text"
+              placeholder="Please enter your surname"
+            />
+          </div>
+          <div>
             <label for="email">Email</label>
-            <input id="email" type="email" placeholder="Please enter your email address" required>
-            </div>
-            <button type="submit">Subscribe</button>
-
+            <input
+              id="email"
+              type="email"
+              placeholder="Please enter your email address"
+              required
+            />
+          </div>
+          <button type="submit">Subscribe</button>
         </form>
-    </section>
-</main>
-
+      </section>
+    </main>
 
     <footer>
       <ul id="social-media">
         <li>
           <a
-            href="https://www.facebook.com" target="_blank" rel="noopener">
-            <i class="fa-brands fa-square-facebook"></i></a>
+            href="https://www.facebook.com"
+            target="_blank"
+            aria-label="Click to visit our Facebook page (opens in new tab)"
+            rel="noopener"
+          >
+            <i class="fa-brands fa-square-facebook"></i
+          ></a>
         </li>
         <li>
-        <a href="https://www.twitter.com" target="_blank" rel="noopener">
-           <i class="fa-brands fa-twitter"></i></a>
+          <a
+            href="https://www.twitter.com"
+            target="_blank"
+            aria-label="Click to visit our Twitter page (opens in new tab)"
+            rel="noopener"
+          >
+            <i class="fa-brands fa-twitter"></i
+          ></a>
         </li>
         <li>
-        <a href="https://www.instagram.com" target="_blank" rel="noopener">
-            <i class="fa-brands fa-instagram"></i></a>
+          <a
+            href="https://www.instagram.com"
+            target="_blank"
+            aria-label="Click to visit our instagram page (opens in new tab)"
+            rel="noopener"
+          >
+            <i class="fa-brands fa-instagram"></i
+          ></a>
         </li>
       </ul>
     </footer>
