--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="New world Travel" />
-    <title>New World Travel - About</title>
+    <title>New World Travel - Contact Us</title>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
@@ -20,8 +20,8 @@
       <nav>
         <ul id="nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
           <li><a href="destinations.html">Destinations</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav>
     </header>
