--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <nav>
         <ul id="nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
           <li><a href="destinations.html">Destinations</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav>
     </header>
