Changed some of the images in destinations page and added another destination

--- a/destinations.html
+++ b/destinations.html
@@ -25,17 +25,17 @@
         </ul>
       </nav>
     </header>
-
+    <!--Main content-->
     <main>
       <!--Lanzarote section-->
       <section id="lanzarote">
         <div>
-          <h2>Lanzarote</h2>
+          <h2 class="header-l">Lanzarote</h2>
         </div>
         <div class="outer-div">
           <div class="img-l">
             <img
-              src="assets/images/Lanzarote.jpg"
+              src="assets/images/lanzarote.jpeg"
               class="lanzarote"
               alt="Beautiful Lanzarote sea and scenery"
             />
@@ -58,12 +58,12 @@
       <!--New York section-->
       <section>
         <div>
-          <h2>New York</h2>
+          <h2 class="header-l">New York</h2>
         </div>
         <div class="outer-div">
           <div class="img-l">
             <img
-              src="assets/images/New-York.jpg"
+              src="assets/images/new-york.jpeg"
               class="new-york"
               alt="Skyline
             image of New York City"
@@ -88,15 +88,14 @@
       <!--Rome section-->
       <section>
         <div>
-          <h2>Rome</h2>
+          <h2 class="header-l">Rome</h2>
         </div>
         <div class="outer-div">
           <div class="img-l">
             <img
-              src="assets/images/Coloseum.jpg"
+              src="assets/images/rome.jpeg"
               class="rome"
-              alt="The Rome
-            Colosseum"
+              alt="The Rome Colosseum"
             />
           </div>
           <div class="text-r">
@@ -114,37 +113,30 @@
         </div>
       </section>
 
-      <!--Subsctiption form-->
       <section>
-        <h2>Subscribe for updates to our destinations</h2>
-        <form action="https://formdump.codeinstitute.net" method="POST">
-          <div>
-            <label for="first-name">First Name</label>
-            <input
-              id="first-name"
-              type="text"
-              placeholder="Please enter your first name"
+        <div>
+          <h2 class="header-l">Las Vegas</h2>
+        </div>
+        <div class="outer-div">
+          <div class="img-l">
+            <img
+              src="assets/images/vegas.jpeg"
+              class="vegas"
+              alt="The Las Vegas Skyline"
             />
           </div>
-          <div>
-            <label for="surname">Surname</label>
-            <input
-              id="surname"
-              type="text"
-              placeholder="Please enter your surname"
-            />
+          <div class="text-r">
+            <p>
+              Sometimes you just want to have a holiday where no day is the
+              same. Las Vegas is the destination for this. Filled with
+              activities you will never be bored. You can venture down the strip
+              visitng the vast array of casinos and restaurants. Or perhaps you
+              would rather see a show with some incredible talent. Or better yet
+              why not take a helicopter ride around the Grand Canyon. If you
+              want a holiday of pure excitement and thrills, Vegas is the dream.
+            </p>
           </div>
-          <div>
-            <label for="email">Email</label>
-            <input
-              id="email"
-              type="email"
-              placeholder="Please enter your email address"
-              required
-            />
-          </div>
-          <button type="submit">Subscribe</button>
-        </form>
+        </div>
       </section>
     </main>
 
