tidied up coding

--- a/destinations.html
+++ b/destinations.html
@@ -65,8 +65,7 @@
             <img
               src="assets/images/new-york.jpeg"
               class="new-york"
-              alt="Skyline
-            image of New York City"
+              alt="Skyline image of New York City"
             />
           </div>
           <div class="text-r">
