--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,11 @@
             </div>
             <div>
                 <label for="details">Details</label>
-            <input id="details" type=text-area placeholder="Tell us about your dream holiday" style="height: 100px" required>
+            <input id="details" 
+            type=text-area 
+            placeholder="Tell us about your dream holiday" 
+            style="height: 100px" 
+            required>
             </div>
           <button type="submit">Submit Details</button>
         </form>
